--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -61,6 +61,7 @@
         position: relative;
         text-align: center;
         width: 100%;
+        padding-right: 0;
     }
 
     .cabecalho nav ul li
